# PS-gr3-ZarnochArtur

./: README.md
Kolokwium1-ZarnochArtur/: README.txt  Zadanie_1.c  Zadanie_2.c  Zadanie_3.c
Kolokwium2-ZarnochArtur/: README.txt  Zadanie_nr1.c  Zadanie_nr2.c  Zadanie_nr3.c
lab0/: lab0.cbp  lab0.depend  lab0.layout  main.c
lab10/: lab10.workspace  lab10.workspace.layout
lab6/: CMakeLists.txt
lab6/3.2.10/: 3.2.10.depend  3.2.10.layout  main.c
lab6/3.2.12/: 3.2.12.cbp  3.2.12.depend  3.2.12.layout  main.c
lab6/3.2.6/: 3.2.6.depend  3.2.6.layout  main.c
lab6/5.2.12/: 5.2.12.cbp  5.2.12.depend  5.2.12.layout  main.c
lab6/5.2.12anth/: 5.2.12anth.cbp  5.2.12anth.depend  5.2.12anth.layout  main.c
lab6/5.2.2/: 5.2.2.cbp  5.2.2.layout  main.c
lab6/5.2.24/: 5.2.24.cbp  5.2.24.depend  5.2.24.layout  main.c
lab6/5.2.24_z_reki/: 5.2.24_z_reki.cbp  5.2.24_z_reki.depend  5.2.24_z_reki.layout  main.c
lab6/5.2.25/: 5.2.25.cbp  5.2.25.depend  5.2.25.layout  main.c
lab6/5.2.3/: 5.2.3.cbp  5.2.3.depend  5.2.3.layout  main.c
lab6/5.2.4/: 5.2.4.cbp  5.2.4.depend  5.2.4.layout  main.c
lab6/5.2.5/: 5.2.5.cbp  5.2.5.depend  5.2.5.layout  main.c
lab6/5.2.6/: 5.2.6.depend  5.2.6.layout  main.c
zad1/: main.c  zad1.depend  zad1.layout
zad10/: main.c
zad11/: main.c  zad11.cbp  zad11.depend
zad12/: main.c  zad12.cbp  zad12.depend
zad2/: main.c  zad2.depend
zad3/: main.c  zad3.depend
zad4/: main.c  zad4.depend
zad5/: main.c  zad5.depend
zad6/: main.c  zad6.cbp  zad6.depend
zad7/: main.c  zad7.depend  zad7.layout
zad8/: main.c
zad9/: kot.txt  (+3 more)
(+302 files in other folders)
