cmake_minimum_required(VERSION 3.17)
project(lab6 C)

set(CMAKE_C_STANDARD 11)

add_executable(lab6
        3.2.10/main.c
        3.2.12/main.c
        3.2.6/main.c
        5.2.12/main.c
        5.2.2/main.c
        5.2.24/main.c
        5.2.3/main.c
        5.2.4/main.c
        5.2.5/main.c
        5.2.6/main.c)
